Refactor tomcat instance state